# sg-coach

./: .gitignore  ARCHITECTURE_DECISION_CHECKPOINT.md  HANDOFF_meta_autofill_cli.md  README.md  SMART_GUITAR_DIRECTION.md  pyproject.toml
.github/: copilot-instructions.md
contracts/: CHANGELOG.md  groove_control_intent_v1.schema.json  groove_profile_v1.schema.json
docs/: HANDOFF_2026-01-24.md  assignment_outcome_examples.md  assignment_outcome_governance.md  drill_resolution_examples.md  drill_resolution_governance.md  legacy_namespace_cleanup.md  practice_assignment_examples.md  practice_assignment_governance.md  timing_evaluator.md  user_feedback_governance.md
scripts/: update_groove_goldens.ps1  update_groove_goldens.sh
tests/: conftest.py  test_action_recommender.py  test_adaptive_ranking.py  test_assignment_outcome.py  test_assignment_policy.py  test_assignment_serializer.py  test_coach_schema.py  test_diminished_pipeline.py  test_drill_resolver.py  test_evaluation_builder_v0_3.py  test_feedback_capture.py  test_golden_update_guard_v1_0.py  test_groove_replay_gate_v1.py  test_learning_aggregation.py  test_learning_store.py  test_learning_weight.py  test_mode1_golden_assignment.py  test_ota_payload.py  test_personalization_blend.py  test_pitch_evaluator.py  test_planner_v0_4.py  test_planner_v0_5.py  test_planner_v0_6.py  test_practice_assignment_assembler.py  test_recommendation_integration.py  test_replay_all_v0_9.py  test_replay_gate_v0_8.py  test_schema_governance.py  test_session_normalizer.py  test_sg_coach_cli_export_bundle.py  test_sg_coach_models.py  (+3 more)
(+103 files in other folders)
