[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sg-coach"
version = "0.2.0"
description = "Smart Guitar Practice Coach - Mode 1 rules-first evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HanzoRazer" }
]
keywords = ["guitar", "music", "coaching", "practice", "midi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sg-coach = "sg_coach.cli:main"

[project.urls]
Homepage = "https://github.com/HanzoRazer/sg-coach"
Repository = "https://github.com/HanzoRazer/sg-coach"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_coach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/sg_coach"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
